fix up spacing and line height

--- a/src/modules/blocks/event-price/style.pcss
+++ b/src/modules/blocks/event-price/style.pcss
@@ -49,8 +49,17 @@
 .tribe-editor__event-price__description {
 	font-size: 1rem;
 	font-weight: normal;
+	line-height: 1.2;
 	order: 4;
 	margin-left: 12px;
+}
+
+.tribe-editor__dashboard {
+
+	.tribe-editor__event-price & {
+		margin-left: 29px;
+		margin-right: 29px;
+	}
 }
 
 .tribe-editor__event-price__dashboard {
@@ -69,7 +78,7 @@
 	&__footer {
 		color: #8D949B;
 		font-size: 0.75rem;
-		padding: 8px 11px;
+		padding: 4px 11px;
 	}
 }
 
